--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,31 @@
+:root {
+    --radius-4: 4px;
+    --radius-6: 6px;
+    --radius-10: 10px;
+}
+
+.light {
+    --background-primary: #f9f7f7;
+    --background-accent-primary: #dbe2ef;
+
+    --foreground-primary: rgba(0, 0, 0, 0.85);
+    --foreground-primary-75: rgb(0, 0, 0, 0.75);
+    --foreground-primary-20: rgb(0, 0, 0, 0.2);
+
+    --accent-1: #4e8fdd;
+    --accent-1-hover: #366196;
+
+    --color-red: #e03737;
+    --color-red-hover: #a91a1a;
+    --color-white: #ffffff;
+
+    --shadow-20: rgb(0, 0, 0, 0.2);
+}
+
 body {
     margin: 0;
 
-    background: gray;
+    background: var(--background-primary);
 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
         'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
