--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,23 @@
 
     --shadow-20: rgb(0, 0, 0, 0.2);
 }
+.dark {
+    --background-primary: #242424;
+    --background-accent-primary: #3d3d3d;
+
+    --foreground-primary: rgba(255, 255, 255, 0.75);
+    --foreground-primary-75: rgba(255, 255, 255, 0.65);
+    --foreground-primary-20: rgba(255, 255, 255, 0.15);
+
+    --accent-1: #2678db;
+    --accent-1-hover: #006aec;
+
+    --color-red: #e03737;
+    --color-red-hover: #a91a1a;
+    --color-white: #ffffff;
+
+    --shadow-20: rgb(0, 0, 0, 0.2);
+}
 
 body {
     margin: 0;
