--- a/src/styles/Navpane.css
+++ b/src/styles/Navpane.css
@@ -5,7 +5,7 @@
     position: fixed;
     transition: 0.25s ease-out;
     overflow: hidden;
-    border-radius: 0 var(--radius-6) var(--radius-6) 0;
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -64,14 +64,13 @@
     border: none;
     outline: none;
     cursor: pointer;
-    border-radius: var(--radius-6);
-    transition: 0.2s;
+    border-radius: var(--radius-4);
 }
 .nav-container span {
     display: flex;
     align-items: center;
     flex-direction: row;
-    width: 300px;
+    width: 210px;
 }
 .nav-menu-item span > p {
     margin-block-start: 0;
@@ -82,17 +81,38 @@
     font-weight: bold;
     letter-spacing: 1px;
 }
-.nav-menu-item span > .nav-menu-icon {
+.nav-menu-item span .nav-menu-icon {
     margin-left: 3px;
     margin-right: 12px;
     font-size: 1.4rem;
 }
 .nav-menu-item-selected {
     background-color: var(--accent-1);
-    color: var(--color-white);
+    color: var(--accent-1-foreground);
+    transition: 0.1s ease-in;
 }
 .nav-separator {
     justify-self: flex-start !important;
     width: 70%;
     border: 0.5px solid var(--foreground-primary-20);
+}
+
+.nav-menu-item p {
+    text-transform: capitalize;
+}
+
+.toggle-light {
+    animation: rotate 0.25s ease-out;
+}
+.toggle-dark {
+    animation: rotate 0.25s ease-out;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotateZ(0);
+    }
+    100% {
+        transform: rotateZ(360deg);
+    }
 }
